<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/primary"
        android:orientation="vertical">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:text="@string/profile"
            android:textColor="@color/white"
            android:textFontWeight="700"
            android:textSize="22sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:gravity="center"
            android:orientation="vertical">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile_image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scaleType="centerCrop"
                android:src="@drawable/logo"
                app:civ_border_color="@color/colorPrimary"
                app:civ_border_overlay="true"
                app:civ_border_width="4dp"
                app:civ_circle_background_color="@color/white" />
        </LinearLayout>

        <TextView
            android:id="@+id/tvUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:textFontWeight="700"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="8dp"
            android:orientation="vertical"
            android:paddingHorizontal="12dp">

            <Button
                android:id="@+id/btn_kalkulator"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_kalkulator" />

            <Button
                android:id="@+id/btn_daily_note"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_daily_note" />

            <Button
                android:id="@+id/btn_buku"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_book" />

            <Button
                android:id="@+id/btn_rest_api"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_rest_api" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="bottom"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/profile_rounded"
                android:paddingHorizontal="24dp"
                android:paddingVertical="8dp">
                >

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_logout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:drawableStart="@drawable/ic_logout"
                    android:drawablePadding="8dp"
                    android:text="@string/logout" />
            </LinearLayout>


        </LinearLayout>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>