<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Buku.Buku">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary">

                <ImageButton
                    android:id="@+id/backButton"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:background="@null"
                    android:contentDescription="@string/txt_back"
                    android:src="@drawable/ic_back" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:text="@string/txt_book"
                    android:textColor="@color/white"
                    android:textSize="24sp" />

                <ImageButton
                    android:id="@+id/addButton"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_gravity="right"
                    android:background="@null"
                    android:contentDescription="@string/txt_add"
                    android:src="@drawable/ic_add"
                    tools:ignore="RtlHardcoded" />

            </androidx.appcompat.widget.Toolbar>
        </com.google.android.material.appbar.AppBarLayout>

        <ListView
            android:id="@+id/lvBuku"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:divider="@android:color/transparent"
            android:dividerHeight="10dp"
            android:padding="14dp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>