<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Buku.DetailBuku">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary">

                <ImageButton
                    android:id="@+id/backButton"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:background="@null"
                    android:contentDescription="@string/txt_back"
                    android:src="@drawable/ic_back" />

                <TextView
                    android:id="@+id/txtDailyNote"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:textColor="@color/white"
                    android:textSize="24sp" />

            </androidx.appcompat.widget.Toolbar>

            <TextView
                android:id="@+id/txtDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:justificationMode="inter_word"
                android:paddingHorizontal="10dp"
                android:textSize="18sp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="10dp">

                <Button
                    android:id="@+id/btnUpdateBook"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_above="@+id/btnDeleteBook"
                    android:layout_marginHorizontal="18dp"
                    android:backgroundTint="@android:color/holo_orange_light"
                    android:text="@string/txt_update_buku" />

                <Button
                    android:id="@+id/btnDeleteBook"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_marginHorizontal="18dp"
                    android:backgroundTint="@android:color/holo_red_light"
                    android:text="@string/txt_delete_buku" />
            </RelativeLayout>
        </com.google.android.material.appbar.AppBarLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>